# Self-Healing-ML-Pipelines

./: .gitignore  ANSWERS_TO_YOUR_QUESTIONS.md  CHANGELOG.md  CITATION.cff  DASHBOARD_INTEGRATION_GUIDE.md  Dockerfile  HUGGINGFACE_DEPLOYMENT_GUIDE.md  PROJECT7_COMPLETION_CERTIFICATE.md  QUICK_DEPLOY.md  README.md  README_MANAGEMENT.md  RESEARCH_CANONIZATION_COMPLETE.md  ablation_study_results_20260128_114435.json  ablation_study_results_20260128_115208.json  ablation_study_results_20260128_121454.json  ablation_study_results_20260128_123918.json  ablation_study_results_20260128_124814.json  ablation_study_results_20260128_124851.json  ablation_study_results_20260506_125956.json  ablation_study_results_20260507_091124.json  adaptive_integration.py  app.py  comprehensive_experiment_summary_20260506_130002.json  comprehensive_experiment_summary_20260507_091112.json  comprehensive_experiment_summary_20260507_091118.json  comprehensive_experiment_summary_20260507_105556.json  concept_shift_results_20260507_091111.json  concept_shift_results_20260507_091118.json  demo_production_readiness.py  deploy_to_cloud.py  experiment_results_20260506_130002.json  experiment_results_20260507_091111.json  experiment_results_20260507_091118.json  index.html  noise_injection_results_20260506_130002.json  noise_injection_results_20260507_091112.json  noise_injection_results_20260507_091118.json  pyproject.toml  requirements.txt  run_pipeline.py  (+8 more)
adaptive/: adaptive_controller.py
api/: __init__.py  api_server.py  human_veto_endpoint.py  veto_dashboard.html
configs/: canary_config.yaml  (+5 more)
(+243 files in other folders)
